--- a/demo/catalog/static/css/mystyles.css
+++ b/demo/catalog/static/css/mystyles.css
@@ -19,6 +19,11 @@ body {
     font-size: 50px;
 }
 
+#register_btn{
+	color: black;
+	text-decoration: none;
+}
+
 #addedPage{
 	display: none;
 	margin-top: 300px;
@@ -78,10 +83,6 @@ body {
 }
 
 #role_row{
-	display:none;
-}
-
-#send_token_btn{
 	display:none;
 }
 
@@ -202,9 +203,6 @@ body {
 	
 }
 
-.login{
-	display:none;
-}
 
 .inputArea{
 	margin: auto;
