--- a/demo/catalog/templates/signin.html
+++ b/demo/catalog/templates/signin.html
@@ -16,7 +16,7 @@
 
 <div class="topnav">
   <table width="100%"><tr>
-	<td width="85%" id="firstCell"><a href="#" ng-click="loginPage()" class="typicalBtn" id="signinbtn">Sign in</a></td>
+	<td width="85%" id="firstCell"><a href="#" ng-click="loginPage()" class="typicalBtn">Sign in</a></td>
 	<td width="15%" ng-click="loadCart()"><div class="icon-cart" style="float: left" id="cartBtn">
 		<div class="cart-line-1" style="background-color: #E5E9EA"></div>
 		<div class="cart-line-2" style="background-color: #E5E9EA"></div>
@@ -111,9 +111,10 @@
 
 <div class="login" id="login" align="center">
 	<div class="inputArea">
+	<!-- register form
 	<form action="/catalog/" method="post" id="form_for_register">{% csrf_token %}
 	<table>
-	<tr id=""username_row"><td>Username: </td><td>{{formForReg_obj.username}}</td></tr>
+	<tr><td>Username: </td><td>{{formForReg_obj.username}}</td></tr>
 	<tr><td>Password: </td><td>{{formForReg_obj.password}}</td></tr>
 	<tr><td>Email address: </td><td>{{formForReg_obj.email}}</td></tr>
 	<tr><td>Token: </td><td>{{formForReg_obj.token}}<button id="send_token_btn">Get Token</button></td></tr>
@@ -121,7 +122,7 @@
 	<tr><td><input type="submit" value="Submit"></td></tr>
 	</table>
 	</form>
-	<!-- Sign in form -->
+-->
 	<form action="/catalog/" method="post" id="form_for_signin">{% csrf_token %}
 	<table>
 	<tr><td>Username: </td><td>{{formForSignIn_obj.username}}</td></tr>
@@ -130,7 +131,7 @@
 	</table>
 	</form>
 
-	<button ng-click="register()" id="register_btn">Register</button>
+	<button><a href="./reg" id="register_btn">Register</a></button>
 	</div>
 </div>
 
